stacked bar plot -> messsyyy

--- a/Part1/deflationDebtCycle/02_bubble.ipynb
+++ b/Part1/deflationDebtCycle/02_bubble.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "92986209",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9fe1becb",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "388a5d87",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "82ffeb10",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
    ],
    "source": [
     "# Debt vs. GDP\n",
-    "p.plot_debt_vs_gdp()"
+    "p.plot_debt_vs_gdp(adjusted_GDP=True)"
    ]
   },
   {
