cycle boundaries -not tested

--- a/Part1/deflationDebtCycle/02_bubble.ipynb
+++ b/Part1/deflationDebtCycle/02_bubble.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3767ecec",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "2008 Bubble Start: 2002-01-01\n",
-      "'2008 Bubble End: 2009-01-01\n"
+      "2008 Bubble End: 2009-01-01\n"
      ]
     }
    ],
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "92986209",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "bub_08 = dc.BUBBLE_PLOTTING(start=dc.bubble_start_08, end=dc.bubble_end_08)"
+    "bub_08 = dc.PLOTTING(start=dc.bubble_start_08, end=dc.bubble_end_08)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9fe1becb",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "388a5d87",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "82ffeb10",
    "metadata": {},
    "outputs": [
