finished bubble code

--- a/Part1/deflationDebtCycle/03_top.ipynb
+++ b/Part1/deflationDebtCycle/03_top.ipynb
@@ -30,6 +30,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Peak of ST few months before peak of market \n",
+    "\n",
+    "\n",
+    "## Policy Changes vs. Asset Price Changes Moving Economic Growth "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Yield Curve "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Yield Curve \n",
+    "# https://en.saif.sjtu.edu.cn/junpan/slides/Slides3_Class3.pdf\n",
+    "\n",
+    "# Fed Funds Effective Rate (DFF) \n",
+    "\n",
+    "#### US T-BONDS \n",
+    "# Two (DGS2)\n",
+    "# Five (DGS5)\n",
+    "# Ten (DGS10)\n",
+    "# Twenty (DGS20)\n",
+    "# Thrity (DGS30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Equity Price (Indexed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Equity Price (Indexed) \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
