depression readme start

--- a/Part1/deflationDebtCycle/03_top.ipynb
+++ b/Part1/deflationDebtCycle/03_top.ipynb
@@ -98,6 +98,11 @@
     }
    ],
    "source": [
+    "# Treasury Bonds: Maturity above 20yrs\n",
+    "    # fixed interest rate paid semiannually -> principal paid back at end \n",
+    "# Treasury Notes: Maturity between 2 and 10 years \n",
+    "    # fixed interest rate paid semiannually -> principal paid back at end \n",
+    "    \n",
     "whole_cycle.plot_t_bond_maturity()"
    ]
   },
