--- a/Part1/inflationDebtCycle/inf_01_early.ipynb
+++ b/Part1/inflationDebtCycle/inf_01_early.ipynb
@@ -16,10 +16,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.8 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "08a0dfaf3fa74e1b9a1bb705dbe1b2708914f992320bdd77350db063c3b717dd"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
