--- a/Part1/deflationDebtCycle/04_depression.ipynb
+++ b/Part1/deflationDebtCycle/04_depression.ipynb
@@ -17,8 +17,32 @@
     "# Nominal Short Rate Graph \n",
     "# Equity Price Graph \n",
     "# Household Debt as % of Net Worth Graph \n",
+    "# USA 3yr Money Growth (%GDP annual)\n",
+    "# US Net Wealth Shares \n",
+    "# \n",
     "\n",
     "# write-down of asset value impacts (pg. 30, paragraph 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### import [d_cycle.py](d_cycle.py) and `fredapi` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import d_cycle as dc\n",
+    "from fredapi import Fred\n",
+    "\n",
+    "api_key = os.environ.get(\"FRED_API_KEY\")\n",
+    "fred = Fred(api_key=api_key)"
    ]
   }
  ],
