--- a/Part2/US_DebtAdjustment/2008_bubble.ipynb
+++ b/Part2/US_DebtAdjustment/2008_bubble.ipynb
@@ -76,9 +76,12 @@
     "\n",
     "### PLOTS\n",
     "- 1990s Debt2GDP Ratio Increasing \n",
+    "    - avg. rate of Debt/GDP growth (12.6%)\n",
     "- Fed Funds Rate Dropping (previously tight) -> then back up in 2004-2006\n",
     "- Dot Com Bubble -> stocks crashing \n",
-    "- Household Spending + Borrowing Increasing "
+    "- Household Spending + Borrowing Increasing \n",
+    "- Debt Financed Asset Appreciation? (Houses etc.)\n",
+    "    - S&P returns 35% but earnings only grew 32%"
    ]
   },
   {
