--- a/Part2/US_DebtAdjustment/2008_bubble.ipynb
+++ b/Part2/US_DebtAdjustment/2008_bubble.ipynb
@@ -28,24 +28,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      date                                    event\n",
-      "0  01-2004  Increased Home Building Driving Economy\n",
-      "1  09-2004          Flipping Houses Hits Reality TV\n",
-      "      date                                              event\n",
-      "0  04-2004  Alan Greenspan claims deflation threat is gone...\n"
+      "          date                                              event\n",
+      "0   2004-01-22            Increased Home Building Driving Economy\n",
+      "1   2004-09-26                    Flipping Houses Hits Reality TV\n",
+      "2   2004-10-20  Alan Greenspan claims growing mortgage debt is...\n",
+      "3   2005-04-28  Mortgage applications up due to decline in bor...\n",
+      "4   2005-05-10                        U.S. Housing Bubble Appears\n",
+      "5   2005-05-25                         Steep Price Rises in Homes\n",
+      "6   2005-05-31  Fed Debates Pricking US Housing Bubble (asset ...\n",
+      "7   2005-07-09  Real estate bringing in over 700,000 new jobs ...\n",
+      "8   2005-08-17  Healthy Housing Market Lifted the Economy in J...\n",
+      "9   2005-08-28  Alan Greenspan predicts that the housing boom ...\n",
+      "10  2005-10-04    Hot housing markets beginning to see a slowdown\n",
+      "11  2006-01-08  Real estate investors warned that they would n...\n",
+      "12  2006-08-23  Housing market showing signs of potentially dr...\n",
+      "13  2006-08-24  Pre-owned home sales at their lowest level Jul...\n",
+      "14  2006-09-14  Prime Adjustable-Rate Mortgages Foreclosing: H...\n",
+      "         date                                              event\n",
+      "0  2004-04-22  Alan Greenspan claims deflation threat is gone...\n",
+      "1  2004-10-20  Alan Greenspan claims growing mortgage debt is...\n",
+      "2  2004-11-06  When is accumulated debt unsustainable? Time t...\n",
+      "3  2005-05-31  Fed contemplating pricking US Housing Bubble (...\n",
+      "4  2005-08-28  Greenspan predicts that the housing boom and c...\n",
+      "5  2006-02-01  Greenspan steps down after 18 years of service...\n",
+      "6  2006-04-19  Fed signals policy shift on interest rates. Mi...\n",
+      "7  2006-07-10  Former Goldman Sachs Exec. Henry M. Paulson sw...\n",
+      "         date                                              event\n",
+      "0  2005-12-17  Citigroup expanding existing retail business a...\n",
+      "1  2006-02-10  US Trade Deficit Record High in 2005. Up nearl...\n",
+      "2  2006-07-10  Former Goldman Sachs Exec. Henry M. Paulson sw...\n"
      ]
     }
    ],
    "source": [
     "print(tline.housing_crisis_timeline)\n",
-    "print(tline.federal_reserve_timeline)"
+    "print(tline.federal_reserve_timeline)\n",
+    "print(tline.general_financial_news_timeline)"
    ]
   },
   {
@@ -142,6 +167,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Housing Bubble PLOTS \n",
+    "- Home prices from 2004-2006 and 2000-2006\n",
+    "    - plus mortgage data \n",
+    "    - Total Home Sales\n",
+    "- Total Debt Growth (%GDP Ann)\n",
+    "     - Household Debt Growth (%Disposable Income Ann)\n",
+    "- Credit Standards Dropping? \n",
+    "- Fed Easy Monetary Policy + Mortgage Rates \n"
+   ]
   }
  ],
  "metadata": {
