2008 broader bubble notes update

--- a/Part2/US_DebtAdjustment/2008_bubble.ipynb
+++ b/Part2/US_DebtAdjustment/2008_bubble.ipynb
@@ -183,6 +183,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Emerging Broader-Based Bubble \n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Plots \n",
+    "- Savings Rate \n",
+    "- Employment (manufacturing + construction)\n",
+    "- Foreign Capital Inflows (LT+ST rates p.176)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
